# HTTP-Server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  client  client.cpp  configure  main.cpp  server  server.cpp
include/: client.h  common.h  database.h  network.h  parser.h  request_handler.h  response_handler.h  server.h  signal_handler.h  terminal.h  test.h  thread_pool.h
old_include/: common.h  network.h  queue.h  terminal.h  transaction_handler.h
old_src/: signal_handler.c  terminal.c  transaction_handler.c
src/: CMakeLists.txt  client.c  common.c  database.c  main.cpp  network.c  parser.c  queue.c  server.c  signal_handler.c  terminal.c  test.cpp  thread_pool.c  transaction_handler.c
